Asked GPT-4 what I should fill in the manifest.
(Note, I had to manually edit the URL and mail address)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "rusty-jokes"
 version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2018"
+authors = ["Ralf Biedert <rb@xr.io>"]
+description = "A humorous Rust crate that brings joy and entertainment to Rust programmers with features like Laughable Lifetimes, Comedic Concurrency, and Punchline Pointers."
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/ralfbiedert/rusty-jokes"
+readme = "README.md"
+keywords = ["humor", "jokes", "rust", "april-fools"]
 
 [dependencies]
